deployment/mysite-deploy.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: mysite

---

apiVersion: apps/v1
kind: Deployment
metadata:
  name: mysite
  namespace: mysite
spec:
  replicas: 2
  selector:
    matchLabels: 
      app: mysite
  template:
    metadata:
      labels:
        app: mysite
    spec:
      containers:
      - name: mysite
        image: mysite:v0.2
